FIxes button smallness in nav

--- a/scss/partials/global/_nav.scss
+++ b/scss/partials/global/_nav.scss
@@ -86,9 +86,9 @@ header {
     justify-content: center;
     background: $desktop-nav-color;
     color: white;
-    padding: 1em 1.5em;
+    padding: 1rem 1.5rem;
     border-radius: .3em;
-    font-size: .8em;
+    font-size: .85em;
     transition: background 90ms ease;
     svg {
       margin-right: .5em;
